# humanity

./: Cargo.toml  README.md  a.txt
src/: github.rs  humanity.rs  lib.rs  main.rs
